# sgt

./: .gitignore  .htaccess  Buildscr  CHANGELOG  GNUmakefile  LICENCE  LICENCE.xtrace  Makefile  Makefile.am  Makefile.doc  Makefile.in.in  README  Recipe  TODO  XCompose  add.c  agedu.but  agedu.c  agedu.h  aliases.but  align.pl  alloc.c  analyse.py  apfind.c  ascii.c  asciify.c  autogen.pl  axe.but  axe.c  axe.h  axeacts.c  axebuf.c  axecurs.c  axektab.c  axerc.c  axeslang.c  backup  base64.c  bash.rc  beams.h  (+384 more)
MODULES/: charset  halibut  pycee  sdlgames  tweak
after/: Makefile  after.but  after.c
agedu/: Buildscr  GNUmakefile  Makefile  TODO  agedu.but  agedu.c  agedu.h  alloc.c  alloc.h  configure.ac  du.c  du.h  fgetline.c  fgetline.h  html.c  html.h  httpd.c  httpd.h  index.c  index.h  index.tmpl  malloc.c  mkauto.sh  tree.but  trie.c  trie.h  winscan.c
algorithms/: blocksort.html  cumulative.c  listsort.c  listsort.html  revlist.html
amble/: Makefile  a.dia  dodec  e.dia
axe/: .cvsignore  Makefile  axe.but  axe.c  axeacts.c  axebuf.c  axektab.c  axerc.c  axesrch.c  nca.c  nca.h
badger/: Makefile  backdrop.dia  face.dia  makedesc.py  shiny.dia  tail.dia
base64/: Makefile  base64.but  base64.c
bash-notify/: index.but  patch-bash-2.05-notify  patch-bash-2.05a-notify
beep/: beep.but  beep.c
bmbm/: .cvsignore  bookmarks.py
bob/: LICENCE  TODO  bob  bob-delegate-server  bob-deliver  bob.but  bobman.but  checkout.py  cmdline.py  lexer.py  misc.py  name.py  script.py
buildrun/: buildrun.but  buildrun.c  test.sh
caltrap/: .cvsignore  Makefile  TODO  add.c  caltrap.h  cron.c  datetime.c  del.c  dump.c  edit.c  error.c  help.c  info.c  licence.c  list.c  main.c  malloc.c  misc.c  sqlite.c
ccube/: Makefile  pic.ps
cdescent/: index.html
commands/: chores  talker
control/: bugs2html  spec
crypto/: aes.c  desref.py  md5.c  rijndael.py  sha.c  sha512.c  shaconstants.py
cvt-utf8/: Makefile  cvt-utf8  cvt-utf8.but
data/: 256-colours  256-colours-match-xterm  accept-host-keys  ansisys-compat  arcfour  assert-fail-newsavelines  assert-line-not-null  async-dns  auth-pref  autoscroll-accel  avoid-msgbox  banner-escape-codes  bce-default-change  beepind-win2k  bidi  black-pointer  blinkrate  bold-font-colour  break-key  bypass-ssh2-userauth  change-scrollback-altscr  cmdline-host-override  cmdline-licence  cmdline-nc-garbage  cmdline-serial  cmdline-x-display  colour-scheme  command-line  compressed-scrollback  config-locations  config-struct  context-menu  control-window-pos  cooked-printer  copyall-to-cursor  cryptoapi  ctrl-pgupdn-config  custom-icons  cygwin-clobbers-pageant  cygwin-terminal-window  (+345 more)
dboot/: Makefile  bootsect.asm  dboot.c  dboot.doc  loader.asm  makedist.sh  makeloader.c  mbr
dice/: face.ps  head.ps  index.html  tblcolhead.ps  tblentry.ps  tblredentry.ps
dmirror/: README  dmdecode.c
doc/: Makefile  xtrace.1  xtrace.but
dodec-cubes/: Makefile  dodec-cubes.pov
doit/: Buildscr  LICENCE  README  doitclient.c  doitlib.c  index.html  listener.c
dsa/: Makefile
eek/: Makefile  eek.pov  foot.dia  icos  nosepiece.dia  wing.ps
enigma/: Buildscr  CHANGELOG  Makefile  Makefile.in.in  config.h  engine.c  enigma.h  index.html  levelfile.c  main.c  memory.c  misc.c  savefile.c  screen.c
enigma-1.0/: Makefile  configure.in  misc.c  savefile.c  screen.c
enigma-1.01/: Makefile  Makefile.in.in  enigma.h  levelfile.c  screen.c  settings.h
enigma-1.02/: CHANGELOG  enigma.h  levelfile.c  savefile.c
enigma-1.03/: CHANGELOG  levelfile.c  memory.c  savefile.c
enigma-1.04/: .cvsignore  LICENCE  MODULE  Makefile  Makefile.in.in  engine.c  levelfile.c  main.c  misc.c  savefile.c  screen.c  settings.h
examples/: Makefile
filigram/: gen.sh  index.html
filter/: .cvsignore  Makefile  asciify.c  cstrans.c  filter.h  idletrans.c  main.c  nhtrans.c  nulltrans.c  pty.c  record.c
fixed/: Makefile  genfixed.py
font/: curves.py  glyphs.py  gui.py
fonts/: .htaccess  dewinfont  fixed.fon  fixedc.fon  tektite.bdf  tektite.fon  tektite.pcf.Z
games/: ghost.py  groupmap.c  mmsolver.c  shutthebox.py
globe/: Makefile  cube.pov  icos-faces  icosb.pov  icosc.pov  makecmap.sh  makemap.sh  sphunpack.ps
gonville/: Buildscr  LICENCE  README.dev  TODO  curves.py  glyphs.py  gui.py  index.tmpl  lilydemo.ly  lilysetup  lilytest.ly
grunge/: .cvsignore  README  grunge  rgtpclient.py  term.py
halibut/: index.but
html/: .cvsignore  Makefile  aliases.but  bugs-br.html  bugs-cn.html  bugs-cz.html  bugs-da.html  bugs-de.html  bugs-es.html  bugs-fr.html  bugs-hu.html  bugs-it.html  bugs-jp.html  bugs-nl.html  bugs-pl.html  bugs-ru.html  bugs-tw.html  bugs.html  cdescent.but  coroutine.h  coroutines.html  index.html  index.tmpl  infinity.html  interfaces.but  makepage.pl  smell.but  svn.but
html-misc/: bugs-freshmeat-branch.html
ick-keys/: Buildscr  Recipe  misc.h  unix.c  wintray.c  xplib.c  xplib.h
ick-proxy/: Buildscr  LICENCE  Makefile  Makefile.vc  Recipe  buildpac.h  gui0.but  gui1.but  home.pac  ick-config.js  ick-proxy.but  ick-proxy.c  icklang.c  icklang.h  icklang.y  index.html  malloc.c  manpage.but  manpage0.but  manpage1.but  mkfiles.pl  osx-info.plist  osx.icns  osx.m  proxy.c  tree234.c  unix.c  unix.h  uxcommon.c  wintray.c  wintray.rc  work.sh
ipbt/: Buildscr  Makefile.am  configure.ac  index.tmpl  ipbt.c  sbcsgen.pl
keys/: master-rsa.asc  release-dsa.asc  release-rsa.asc
levels/: original05.level  original08.level
libcode/: bres.py  colquant.c  deflate.c  dither.c  lambertw.c  listsort.c  lz77.c  mathlib.py  mathsfns.txt  maxflow.c  normal.c  pymaths.c  rational.py  smoothsort.c
linuxrc/: Makefile  linuxrc.c
listener/: Buildscr  Makefile  doit-client  doit.c  doit.h  doit.rc  doitclient.c  doitdoc.txt  doitlib.c  doitprot.txt  listener.c
lj/: .cvsignore  cookurl.py  diary  diary.sample  diary.sl  interests  ljdownload  ljfriends  ljlogin  ljpoll  ljpost  ljproto.py  ljscan  simont-dw.s2  simont.s2
lns/: Makefile  lns  lns.but
xtruss/: Buildscr  GNUmakefile  configure.ac  ssh.h  uxxtruss.c  x11fwd.c  xtruss.but
(+1204 files in other folders)
